# jupyter-utils

./: Makefile  README.md  pyproject.toml  requirements-[all].txt  requirements-all.txt  requirements.txt
.github/workflows/: qc-and-test.yaml  release.yaml  test.yaml
jupyter_utils/: __init__.py  common.py  exceptions.py  functions.py  polars.py
magicbox/: __init__.py  common.py  random.py  torch.py
tests/: conftest.py  test_common_utils.py  test_func_utils.py  test_polars_utilities.py  test_random_number_generator.py  test_torch_utils.py
