[project]
dynamic = ["version", "readme", "dependencies"]
license = {file = "LICENCE"}
name = "jupyter-utils"
requires-python = ">=3.11"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
readme = {file = "README.md"}
version = {attr = "jupyter_utils.__version__"}

[project.optional-dependencies]
all = ["jupyter-utils[dev]"]
dev = ["pip-tools", "ruff", "jupyter-utils[test]"]
test = ["pytest", "pytest-cov"]

[tool.setuptools.package-dir]
"jupyter_utils" = "jupyter_utils"

[tool.pytest.ini_options]
addopts = [
  "-vv",
  "-s",
]

[tool.coverage.run]
parallel = true

[tool.ruff.lint]
pydocstyle = {convention = 'google'}
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "C4",
  "UP",
  "D",
]
