[project]
dynamic = ["version", "readme", "dependencies"]
license = {file = "LICENCE"}
name = "magicbox"
requires-python = ">=3.11"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
readme = {file = "README.md"}
version = {attr = "magicbox.__version__"}

[project.optional-dependencies]
all = ["magicbox[dev,polars,notebook]"]
dev = ["pip-tools", "ruff", "magicbox[test]"]
notebook = ['notebook', 'ipykernel']
polars = ['polars']
test = ["pytest", "pytest-cov", "numpy", "torch"]

[tool.setuptools.package-dir]
"magicbox" = "magicbox"

[tool.pytest.ini_options]
addopts = [
  "-vv",
  "-s",
]

[tool.coverage.run]
parallel = true

[tool.ruff.lint]
pydocstyle = {convention = 'google'}
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "C4",
  "UP",
  "D",
]
